Fix.add note alignment

--- a/styles/bahmniAppsFormBuilder/_form.scss
+++ b/styles/bahmniAppsFormBuilder/_form.scss
@@ -326,7 +326,7 @@ $lightestGray: #eee;
           // across all field types (dropdowns, multiselect buttons, numeric inputs, text, etc).
           > .form-builder-comment-wrap {
             position: absolute;
-            right: $spacing-13;
+            right: $spacing-07;
             top: $spacing-03;
             z-index: 100;
             pointer-events: auto;
